2011-05-10  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Also link tools against LIBM.

2011-03-25  Stefan Kost  <ensonic@users.sf.net>

	* src/bml.c:
	  Investigate the crashers with the locking and Check_FS_Segment()
	  deactivated. The locking seems to be not needed, but the
	  Check_FS_Segment().

2011-02-22  Stefan Kost  <ensonic@users.sf.net>

	* src/bml.c:
	  Code cleanup and some interesting discovery about performance. Yet,
	  conditionally off.

	* tests/testmachine.sh:
	  Use proper signal name.

2011-01-30  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Emulate more functions.

2011-01-29  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Add more API. Emulate GetStartupInfoA more.

2011-01-29  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.h:
	* src/bmltest_process.h:
	  Fix double free.

2011-01-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update TODO list and results from latest bml for another setup.

2011-01-10  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.h:
	  Filter newlines in command output.

	* tests/testmachine.sh:
	  Improve report: lowercase dlls (takes less space), print extra
	  commands.

2011-01-10  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper/wine/win32.c:
	  Improve faking our indentity. Fixes cheapo spread :).

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper/wine/win32.c:
	  Also register MSVCRTD (debug variant). Fixes one more machine.

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* tests/testmachine.sh:
	  Fix link for sortable.js. Add more cmdline tricks for log analysis.

2011-01-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.ncb:
	* src/BuzzMachineLoader/BuzzMachineLoader.suo: