@@ -25,7 +25,7 @@
 #include <ext.h>
 
 /**********************************************************************
- *  HMODULE32toPE_MODREF 
+ *  HMODULE32toPE_MODREF
  *
  * small helper function to get a PE_MODREF from a passed HMODULE32
  */
@@ -62,13 +62,13 @@ PIMAGE_RESOURCE_DIRECTORY GetResDirEntryW(PIMAGE_RESOURCE_DIRECTORY resdirptr,
 		return GetResDirEntryW(resdirptr,(LPCWSTR)atoi(buf),root,allowdefault);
 	}
 	entryTable = (PIMAGE_RESOURCE_DIRECTORY_ENTRY) (
-			(BYTE *) resdirptr + 
+			(BYTE *) resdirptr +
                         sizeof(IMAGE_RESOURCE_DIRECTORY));
 	namelen = lstrlenW(name);
 	for (entrynum = 0; entrynum < resdirptr->NumberOfNamedEntries; entrynum++)
 	{
 		PIMAGE_RESOURCE_DIR_STRING_U str =
-		(PIMAGE_RESOURCE_DIR_STRING_U) (root + 
+		(PIMAGE_RESOURCE_DIR_STRING_U) (root +
 			entryTable[entrynum].u1.s.NameOffset);
 		if(namelen != str->Length)
 			continue;
@@ -80,7 +80,7 @@ PIMAGE_RESOURCE_DIRECTORY GetResDirEntryW(PIMAGE_RESOURCE_DIRECTORY resdirptr,
 	return NULL;
     } else {
 	entryTable = (PIMAGE_RESOURCE_DIRECTORY_ENTRY) (
-			(BYTE *) resdirptr + 
+			(BYTE *) resdirptr +
                         sizeof(IMAGE_RESOURCE_DIRECTORY) +
 			resdirptr->NumberOfNamedEntries * sizeof(IMAGE_RESOURCE_DIRECTORY_ENTRY));
 	for (entrynum = 0; entrynum < resdirptr->NumberOfIdEntries; entrynum++)
@@ -105,7 +105,7 @@ PIMAGE_RESOURCE_DIRECTORY GetResDirEntryA( PIMAGE_RESOURCE_DIRECTORY resdirptr,
 					   WIN_BOOL allowdefault )
 {
     PIMAGE_RESOURCE_DIRECTORY retv;
-    LPWSTR nameW = HIWORD(name)? HEAP_strdupAtoW( GetProcessHeap(), 0, name ) 
+    LPWSTR nameW = HIWORD(name)? HEAP_strdupAtoW( GetProcessHeap(), 0, name )
                                : (LPWSTR)name;
 
     retv = GetResDirEntryW( resdirptr, nameW, root, allowdefault );
@@ -175,7 +175,7 @@ PE_EnumResourceTypesA(HMODULE hmod,ENUMRESTYPEPROCA lpfun,LONG lparam) {
     PIMAGE_RESOURCE_DIRECTORY		resdir;
     PIMAGE_RESOURCE_DIRECTORY_ENTRY	et;
     WIN_BOOL	ret;
-    HANDLE	heap = GetProcessHeap();	
+    HANDLE	heap = GetProcessHeap();
 
     if (!pem || !pem->pe_resource)
     	return FALSE;
@@ -242,7 +242,7 @@ PE_EnumResourceNamesA(
     PIMAGE_RESOURCE_DIRECTORY		resdir;
     PIMAGE_RESOURCE_DIRECTORY_ENTRY	et;
     WIN_BOOL	ret;
-    HANDLE	heap = GetProcessHeap();	
+    HANDLE	heap = GetProcessHeap();
     LPWSTR	typeW;
 
     if (!pem || !pem->pe_resource)
@@ -322,7 +322,7 @@ PE_EnumResourceLanguagesA(
     PIMAGE_RESOURCE_DIRECTORY		resdir;
     PIMAGE_RESOURCE_DIRECTORY_ENTRY	et;
     WIN_BOOL	ret;
-    HANDLE	heap = GetProcessHeap();	
+    HANDLE	heap = GetProcessHeap();
     LPWSTR	nameW,typeW;
 
     if (!pem || !pem->pe_resource)
@@ -334,7 +334,7 @@ PE_EnumResourceLanguagesA(
     else
     	nameW = (LPWSTR)name;
     resdir = GetResDirEntryW(resdir,nameW,(DWORD)pem->pe_resource,FALSE);
-    if (HIWORD(nameW))
+    if (HIWORD(name))
     	HeapFree(heap,0,nameW);
     if (!resdir)
     	return FALSE;
