@@ -1,3 +1,12 @@
+2011-05-12  Stefan Kost  <ensonic@users.sf.net>
+
+	* dllwrapper/wine/ext.c:
+	* dllwrapper/wine/module.c:
+	* dllwrapper/wine/pe_resource.c:
+	* dllwrapper/wine/registry.c:
+	* dllwrapper/wine/win32.c:
+	  Remove some left-over debug logging. Fix some compiler warnings.
+
 2011-05-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/Makefile.am:
